--- a/tutorials/templates/dashboard.html
+++ b/tutorials/templates/dashboard.html
@@ -4,6 +4,8 @@
   <div class="row">
     <div class="col-12">
       <h1>Welcome to your dashboard {{ user.username }}</h1>
+      {% block student_dashboard %}
+      {% endblock %}
     </div>
   </div>
 </div>
