--- a/tutorials/templates/dashboard.html
+++ b/tutorials/templates/dashboard.html
@@ -1,10 +1,11 @@
 {% extends 'base_content.html' %}
+
 {% block content %}
 <div class="container">
   <div class="row">
     <div class="col-12">
       <h1>Welcome to your dashboard {{ user.username }}</h1>
-      {% block student_dashboard %}
+      {% block dashboard_content %}
       {% endblock %}
     </div>
   </div>
