--- a/tutorials/templates/tutor_dashboard.html
+++ b/tutorials/templates/tutor_dashboard.html
@@ -3,7 +3,7 @@
 {% block dashboard_content %}
 <div>
     <!-- Upcoming Lessons -->
-    <div class="mb-3">
+    <div class="mb-5">
         <h3 class="mb-3">Your upcoming lessons</h3>
         <table class="table table-striped table-hover">
             <thead>
@@ -11,26 +11,25 @@
                     <th scope="col">Date</th>
                     <th scope="col">Time</th>
                     <th scope="col">Duration</th>
-                    <th scope="col">Tutor</th>
+                    <th scope="col">Student</th>
                     <th scope="col">Subject</th>
                     <th scope="col">Venue</th>
                 </tr>
             </thead>
             <tbody>
                 <!-- TODO -->
-                {% for lesson in upcoming_lessons %}
+                {% for lesson in tutor_lessons %}
                 <tr>
                     <td>{{ lesson.date }}</td>
                     <td>{{ lesson.time }}</td>
                     <td>{{ lesson.duration }}</td>
-                    <td>{{ lesson.tutor }}</td>
+                    <td>{{ lesson.student }}</td>
                     <td>{{ lesson.subject }}</td>
                     <td>{{ lesson.venue }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
-        <button class="btn btn-primary">New booking...</button>
     </div>
 
     <!-- Previous Lessons -->
@@ -42,7 +41,7 @@
                     <th scope="col">Date</th>
                     <th scope="col">Time</th>
                     <th scope="col">Duration</th>
-                    <th scope="col">Tutor</th>
+                    <th scope="col">Student</th>
                     <th scope="col">Subject</th>
                 </tr>
             </thead>
@@ -53,34 +52,8 @@
                     <td>{{ lesson.date }}</td>
                     <td>{{ lesson.time }}</td>
                     <td>{{ lesson.duration }}</td>
-                    <td>{{ lesson.tutor }}</td>
+                    <td>{{ lesson.student }}</td>
                     <td>{{ lesson.subject }}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-
-    <!-- Invoices -->
-    <div>
-        <h3 class="mb-3">Your invoices</h3>
-        <table class="table table-striped table-hover">
-            <thead>
-                <tr>
-                    <th scope="col">Invoice Number</th>
-                    <th scope="col">Term</th>
-                    <th scope="col">Amount</th>
-                    <th scope="col">Status</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- TODO -->
-                {% for invoice in invoices %}
-                <tr>
-                    <td>{{ invoice.number }}</td>
-                    <td>{{ invoice.term }}</td>
-                    <td>{{ invoice.amount }}</td>
-                    <td>{{ invoice.status }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
