--- a/tutorials/templates/home.html
+++ b/tutorials/templates/home.html
@@ -7,8 +7,13 @@
           <h1 class="cover-heading">Task Manager</h1>
           <p class="cover-text">A task manager application by Team <i>Insert team name here (or revise this home screen as you see fit)</i></p>
           <p>
-            <a href='{% url 'sign_up' %}' class="btn btn-lg btn-secondary">
-              Sign up
+            <a href='{% url 'student_sign_up' %}' class="btn btn-lg btn-secondary">
+              Student Sign up
+            </a>
+          </p>
+          <p>
+            <a href='{% url 'tutor_sign_up' %}' class="btn btn-lg btn-secondary">
+              Tutor Sign up
             </a>
           </p>
           <p>
