--- a/tutorials/templates/manage_bookings.html
+++ b/tutorials/templates/manage_bookings.html
@@ -1,16 +1,32 @@
 {% extends 'manage_entities.html' %}
-    <!-- TODO: fill out similar to manage_users-->
 
 {% block entity_type %}
-
+    bookings
 {% endblock %}
 
 
 {% block table_headers %}
-    
+    <th scope="col">#</th>
+    <th scope="col">Student</th>
+    <th scope="col">Requested Date</th>
+    <th scope="col">Requested Time</th>
+    <th scope="col" class="text-end">Actions</th>
 {% endblock %}
 
 
 {% block table_rows %}
-    
+    {% for booking in bookings %}
+    <tr>
+        <th scope="col">n</th>
+        <td>{{booking.student.username}}</td>
+        <td>{{booking.date}}</td>
+        <td>{{booking.time}}</td>
+        <!--TODO: add urls with a-href for buttons to function later-->
+        <td class="text-end">
+            <a href="#" class="btn btn-sm btn-outline-primary"><i class="bi bi-eye-fill"></i></a>
+            <a href="#" class="btn btn-sm btn-outline-warning"><i class="bi bi-pencil-fill"></i></a>
+            <a href="#" class="btn btn-sm btn-outline-danger"><i class="bi bi-trash-fill"></i></a>
+        </td>            
+    </tr>
+    {% endfor %}
 {% endblock %}
