--- a/tutorials/templates/manage_entities.html
+++ b/tutorials/templates/manage_entities.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container mt-5">
-    <h2 class="mb-4">Manage {% block entity_type %}{{entity_type}}{% endblock %}</h2> 
+    <h2 class="mb-4">Manage {% block entity_type %}{{entity_name}}{% endblock %}</h2> 
     <table class="table table-striped table-hover">
         <thead>
         <tr>
