Fix redirection issue for student sign-up

--- a/tutorials/templates/home.html
+++ b/tutorials/templates/home.html
@@ -1,28 +1,28 @@
 {% extends 'base.html' %}
 {% block body %}
-  <div class="container vh-100">
-    <div class="row h-100">
-      <div class="col-12 my-auto">
-        <div class="card cover-card offset-sm-2 offset-md-4 offset-lg-7">
-          <h1 class="cover-heading">Task Manager</h1>
-          <p class="cover-text">A task manager application by Team <i>Insert team name here (or revise this home screen as you see fit)</i></p>
-          <p>
-            <a href='{% url 'student_sign_up' %}' class="btn btn-lg btn-secondary">
-              Student Sign up
-            </a>
-          </p>
-          <p>
-            <a href='{% url 'tutor_sign_up' %}' class="btn btn-lg btn-secondary">
-              Tutor Sign up
-            </a>
-          </p>
-          <p>
-            <a href='{% url 'log_in' %}' class="btn btn-lg btn-secondary">
-              Log in
-            </a>
-          </p>
-        </div>
-      </div>
+  <div class="container-fluid d-flex justify-content-center align-items-center vh-100" style="background: linear-gradient(to right, #2c3e50, #3498db);">
+    <div class="text-center text-white p-5 rounded shadow-lg" style="max-width: 600px; background-color: rgba(0, 0, 0, 0.6);">
+      <h1 class="display-4 font-weight-bold mb-4">Code Tutors</h1>
+      <p class="lead mb-4">A task manager application by Team <strong>Your Team Name</strong></p>
+
+      <p class="mb-3">
+        <a href='{% url "student_sign_up" %}' class="btn btn-primary btn-lg btn-block rounded-pill">
+          <i class="fas fa-user-plus"></i> Student Sign Up
+        </a>
+      </p>
+
+      <p class="mb-3">
+        <a href='{% url "tutor_sign_up" %}' class="btn btn-success btn-lg btn-block rounded-pill">
+          <i class="fas fa-chalkboard-teacher"></i> Tutor Sign Up
+        </a>
+      </p>
+
+      <p class="mb-3">
+        <a href='{% url "log_in" %}' class="btn btn-warning btn-lg btn-block rounded-pill">
+          <i class="fas fa-sign-in-alt"></i> Log In
+        </a>
+      </p>
+
     </div>
   </div>
 {% endblock %}
