--- a/tutorials/templates/manage/manage_bookings.html
+++ b/tutorials/templates/manage/manage_bookings.html
@@ -1,7 +1,7 @@
-{% extends 'manage_entities.html' %}
+{% extends 'manage/manage_entities.html' %}
 
 {% block entity_type %}
-    bookings
+    {{entity_name}}s
 {% endblock %}
 
 
@@ -10,6 +10,7 @@
     <th scope="col">Student</th>
     <th scope="col">Requested Date</th>
     <th scope="col">Requested Time</th>
+    <th scope="col">Status</th>
     <th scope="col" class="text-end">Actions</th>
 {% endblock %}
 
@@ -17,16 +18,15 @@
 {% block table_rows %}
     {% for booking in bookings %}
     <tr>
-        <th scope="col">n</th>
+        <th scope="col">{{booking.id}}</th>
         <td>{{booking.student.username}}</td>
         <td>{{booking.date}}</td>
         <td>{{booking.time}}</td>
+        <td>{{booking.status}}</td>
         <!--TODO: add urls with a-href for buttons to function later-->
         <td class="text-end">
-            <a href="#" class="btn btn-sm btn-outline-primary"><i class="bi bi-eye-fill"></i></a>
-            <a href="#" class="btn btn-sm btn-outline-warning"><i class="bi bi-pencil-fill"></i></a>
-            <a href="#" class="btn btn-sm btn-outline-danger"><i class="bi bi-trash-fill"></i></a>
-        </td>            
+            <a href="{% url 'get_booking' booking.id %}" class="btn btn-primary btn-sm" >View</a>
+        </td>
     </tr>
     {% endfor %}
 {% endblock %}
