--- a/tutorials/templates/entities/booking.html
+++ b/tutorials/templates/entities/booking.html
@@ -35,7 +35,12 @@
                 <p><strong>Status</strong>: {{ booking.status }}</p>
             </div>
 
-            <a href="{% url 'manage_bookings' %}" class="btn btn-primary">OK</a>
+            <a href="{% url 'manage_bookings' %}" class="btn btn-primary">
+                OK
+            </a>
+            <a href="{% url 'update_booking' booking.id %}" class="btn btn-warning">
+                Edit
+            </a>            
             <a href="{% url 'delete_booking' booking.id %}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this booking?');">
                 Delete
             </a>
