--- a/tutorials/templates/entities/user.html
+++ b/tutorials/templates/entities/user.html
@@ -20,8 +20,13 @@
                 <p><strong>Email</strong>: {{ user.email }}</p>
             </div>
             {% block extra_fields %}
-                <a href="{% url 'manage_users' %}" class="btn btn-primary">OK</a>
+                <a href="{% url 'manage_users' %}" class="btn btn-primary">
+                    OK
+                </a>
             {% endblock %}
+            <a href="{% url 'update_user' user.id %}" class="btn btn-warning">
+                Edit
+            </a>
             <a href="{% url 'delete_user' user.id %}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this user?');">
                 Delete
             </a>
