--- a/tutorials/templates/student_dashboard.html
+++ b/tutorials/templates/student_dashboard.html
@@ -1,6 +1,42 @@
 {% extends 'dashboard.html' %}
 
 {% block dashboard_content %}
+
+<div>
+    <!-- Requested Bookings -->
+    <div class="mb-3">
+        <h3 class="mb-3">Your requested bookings</h3>
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr>
+                    <th scope="col">Date</th>
+                    <th scope="col">Time</th>
+                    <th scope="col">Duration</th>
+                    <th scope="col">Subject</th>
+                    <th scope="col">Venue</th>
+                    <th scope="col">Tutor</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for booking in requested_bookings %}
+                <tr>
+                    <td>{{ booking.date }}</td>
+                    <td>{{ booking.time }}</td>
+                    <td>{{ booking.duration }}</td>
+                    <td>{{ booking.subject }}</td>
+                    <td>{{ booking.venue }}</td>
+                    <td>{{ booking.tutor|default:"TBD" }}</td>
+                </tr>
+                {% empty %}
+                <tr>
+                    <td colspan="6">No requested bookings found.</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        <a href="{% url 'create_booking' %}" class="btn btn-primary">New booking...</a>
+    </div>
+
 <div>
     <!-- Upcoming Lessons -->
     <div class="mb-3">
@@ -30,7 +66,7 @@
                 {% endfor %}
             </tbody>
         </table>
-        <button class="btn btn-primary">New booking...</button>
+        <a href="{% url 'create_booking' %}" class="btn btn-primary">New booking...</a>
     </div>
 
     <!-- Previous Lessons -->
