Fix existing tests

--- a/tutorials/templates/entities/tutor.html
+++ b/tutorials/templates/entities/tutor.html
@@ -7,7 +7,7 @@
             <h2 class="mb-4">{{ tutor.user.username }}</p></h2>
 
             <div class="mb-3">
-                <p><strong>User ID</strong>: #{{ tutor.user.id }}</p>
+                <p><strong>User ID</strong>: {{ tutor.user.id }}</p>
             </div>
             <div class="mb-3">
                 <p><strong>First Name</strong>: {{ tutor.user.first_name }}</p>
