--- a/tutorials/templates/entities/user.html
+++ b/tutorials/templates/entities/user.html
@@ -4,10 +4,10 @@
 <div class="container mt-5">
     <div class="card">
         <div class="card-body">
-            <h2 class="mb-4">User #{{ user.id }}</p></h2>
+            <h2 class="mb-4"> {{ user.username }}p></h2>
 
             <div class="mb-3">
-                <p><strong>Username</strong>: {{ user.username }}</p>
+                <p><strong>User ID</strong>: {{ user.id }}</p>
             </div>
             <div class="mb-3">
                 <p><strong>First Name</strong>: {{ user.first_name }}</p>
@@ -17,6 +17,9 @@
             </div>
             <div class="mb-3">
                 <p><strong>Email</strong>: {{ user.email }}</p>
+            </div>
+            <div class="mb-3">
+                <p><strong>Role</strong>: {{ user.role }}</p>
             </div>
 
             <a href="{% url 'manage_users' %}" class="btn btn-primary">
