--- a/tutorials/templates/dashboard.html
+++ b/tutorials/templates/dashboard.html
@@ -13,6 +13,7 @@
 {% endblock %}
 
 <!-- Alternative design -->
+{%comment%}
 {% extends 'base_content.html' %}
 {% block content %}
   <div class="container-fluid d-flex justify-content-center align-items-center vh-100" style="background: linear-gradient(to right, #2c3e50, #3498db);">
@@ -25,3 +26,4 @@
     </div>
   </div>
 {% endblock %}
+{%endcomment%}
