--- a/tutorials/templates/student_dashboard.html
+++ b/tutorials/templates/student_dashboard.html
@@ -9,23 +9,23 @@
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
+                    <th scope="col">#</th>
                     <th scope="col">Date</th>
                     <th scope="col">Time</th>
                     <th scope="col">Duration</th>
-                    <th scope="col">Subject</th>
+                    <th scope="col">Language</th>
                     <th scope="col">Venue</th>
-                    <th scope="col">Tutor</th>
                 </tr>
             </thead>
             <tbody>
-                {% for booking in requested_bookings %}
+                {% for booking in bookings %}
                 <tr>
+                    <th scope="col">{{ booking.id }}</th>
                     <td>{{ booking.date }}</td>
                     <td>{{ booking.time }}</td>
                     <td>{{ booking.duration }}</td>
-                    <td>{{ booking.subject }}</td>
+                    <td>{{ booking.lang }}</td>
                     <td>{{ booking.venue }}</td>
-                    <td>{{ booking.tutor|default:"TBD" }}</td>
                 </tr>
                 {% empty %}
                 <tr>
@@ -34,6 +34,7 @@
                 {% endfor %}
             </tbody>
         </table>
+
         <a href="{% url 'create_booking' %}" class="btn btn-primary">New booking...</a>
     </div>
 
@@ -44,29 +45,33 @@
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
+                    <th scope="col">#</th>
                     <th scope="col">Date</th>
                     <th scope="col">Time</th>
                     <th scope="col">Duration</th>
                     <th scope="col">Tutor</th>
-                    <th scope="col">Subject</th>
+                    <th scope="col">Language</th>
                     <th scope="col">Venue</th>
                 </tr>
             </thead>
             <tbody>
-                <!-- TODO -->
                 {% for lesson in upcoming_lessons %}
                 <tr>
-                    <td>{{ lesson.date }}</td>
-                    <td>{{ lesson.time }}</td>
-                    <td>{{ lesson.duration }}</td>
+                    <th scope="col">{{ lesson.booking.id }}</th>
+                    <td>{{ lesson.booking.date }}</td>
+                    <td>{{ lesson.booking.time }}</td>
+                    <td>{{ lesson.booking.duration }}</td>
                     <td>{{ lesson.tutor }}</td>
-                    <td>{{ lesson.subject }}</td>
-                    <td>{{ lesson.venue }}</td>
+                    <td>{{ lesson.booking.lang }}</td>
+                    <td>{{ lesson.booking.venue }}</td>
+                </tr>
+                {% empty %}
+                <tr>
+                    <td colspan="6">No lessons found.</td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
-        <a href="{% url 'create_booking' %}" class="btn btn-primary">New booking...</a>
     </div>
 
     <!-- Previous Lessons -->
@@ -75,48 +80,29 @@
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
+                    <th scope="col">#</th>
                     <th scope="col">Date</th>
                     <th scope="col">Time</th>
                     <th scope="col">Duration</th>
                     <th scope="col">Tutor</th>
-                    <th scope="col">Subject</th>
+                    <th scope="col">Language</th>
+                    <th scope="col">Invoice</th>
                 </tr>
             </thead>
             <tbody>
-                <!-- TODO -->
                 {% for lesson in previous_lessons %}
                 <tr>
-                    <td>{{ lesson.date }}</td>
-                    <td>{{ lesson.time }}</td>
-                    <td>{{ lesson.duration }}</td>
+                    <th scope="col">{{ lesson.booking.id }}</th>
+                    <td>{{ lesson.booking.date }}</td>
+                    <td>{{ lesson.booking.time }}</td>
+                    <td>{{ lesson.booking.duration }}</td>
                     <td>{{ lesson.tutor }}</td>
-                    <td>{{ lesson.subject }}</td>
+                    <td>{{ lesson.booking.lang }}</td>
+                    <td>{{ lesson.invoice }}</td>
                 </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-
-    <!-- Invoices -->
-    <div>
-        <h3 class="mb-3">Your invoices</h3>
-        <table class="table table-striped table-hover">
-            <thead>
+                {% empty %}
                 <tr>
-                    <th scope="col">Invoice Number</th>
-                    <th scope="col">Term</th>
-                    <th scope="col">Amount</th>
-                    <th scope="col">Status</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- TODO -->
-                {% for invoice in invoices %}
-                <tr>
-                    <td>{{ invoice.number }}</td>
-                    <td>{{ invoice.term }}</td>
-                    <td>{{ invoice.amount }}</td>
-                    <td>{{ invoice.status }}</td>
+                    <td colspan="6">No lessons found.</td>
                 </tr>
                 {% endfor %}
             </tbody>
