--- a/tutorials/templates/tutor_dashboard.html
+++ b/tutorials/templates/tutor_dashboard.html
@@ -8,24 +8,32 @@
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
+                    <th scope="col">#</th>
                     <th scope="col">Date</th>
                     <th scope="col">Time</th>
                     <th scope="col">Duration</th>
                     <th scope="col">Student</th>
-                    <th scope="col">Subject</th>
+                    <th scope="col">Language</th>
+                    <th scope="col">Level</th>
                     <th scope="col">Venue</th>
                 </tr>
             </thead>
             <tbody>
                 <!-- TODO -->
-                {% for lesson in tutor_lessons %}
+                {% for lesson in upcoming_lessons %}
                 <tr>
-                    <td>{{ lesson.date }}</td>
-                    <td>{{ lesson.time }}</td>
-                    <td>{{ lesson.duration }}</td>
-                    <td>{{ lesson.student }}</td>
-                    <td>{{ lesson.subject }}</td>
-                    <td>{{ lesson.venue }}</td>
+                    <th scope="col">{{lesson.booking.id}}</th>
+                    <td>{{ lesson.booking.date }}</td>
+                    <td>{{ lesson.booking.time }}</td>
+                    <td>{{ lesson.booking.duration }}</td>
+                    <td>{{ lesson.booking.student.user.username }}</td>
+                    <td>{{ lesson.booking.lang }}</td>
+                    <td>{{ lesson.booking.student.level }}</td>
+                    <td>{{ lesson.booking.venue }}</td>
+                </tr>
+                {% empty %}
+                <tr>
+                    <td colspan="6">No lessons found.</td>
                 </tr>
                 {% endfor %}
             </tbody>
@@ -38,23 +46,30 @@
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
+                    <th scope="col">#</th>
                     <th scope="col">Date</th>
                     <th scope="col">Time</th>
                     <th scope="col">Duration</th>
                     <th scope="col">Student</th>
-                    <th scope="col">Subject</th>
+                    <th scope="col">Language</th>
+                    <th scope="col">Level</th>
+                    <th scope="col">Venue</th>
                 </tr>
             </thead>
             <tbody>
-                <!-- TODO -->
                 {% for lesson in previous_lessons %}
-                <tr>
-                    <td>{{ lesson.date }}</td>
-                    <td>{{ lesson.time }}</td>
-                    <td>{{ lesson.duration }}</td>
-                    <td>{{ lesson.student }}</td>
-                    <td>{{ lesson.subject }}</td>
-                </tr>
+                    <th scope="col">{{lesson.booking.id}}</th>
+                    <td>{{ lesson.booking.date }}</td>
+                    <td>{{ lesson.booking.time }}</td>
+                    <td>{{ lesson.booking.duration }}</td>
+                    <td>{{ lesson.booking.student.user.username }}</td>
+                    <td>{{ lesson.booking.lang }}</td>
+                    <td>{{ lesson.booking.student.level }}</td>
+                    <td>{{ lesson.booking.venue }}</td>
+                    {% empty %}
+                    <tr>
+                        <td colspan="6">No lessons found.</td>
+                    </tr>
                 {% endfor %}
             </tbody>
         </table>
