Generate past times in seeder

--- a/tutorials/templates/tutor_dashboard.html
+++ b/tutorials/templates/tutor_dashboard.html
@@ -26,7 +26,7 @@
                     <td>{{ lesson.booking.date }}</td>
                     <td>{{ lesson.booking.time }}</td>
                     <td>{{ lesson.booking.duration }}</td>
-                    <td>{{ lesson.booking.student.user.username }}</td>
+                    <td>{{ lesson.booking.student.user.id }}</td>
                     <td>{{ lesson.booking.lang }}</td>
                     <td>{{ lesson.booking.student.level }}</td>
                     <td>{{ lesson.booking.venue }}</td>
