Addded/deleted some #TODOs

--- a/tutorials/templates/dashboard.html
+++ b/tutorials/templates/dashboard.html
@@ -12,7 +12,7 @@
 </div>
 {% endblock %}
 
-<!-- Alternative design -->
+<!-- TODO: Remove? Alternative design -->
 {%comment%}
 {% extends 'base_content.html' %}
 {% block content %}
