Add view button to student and tutor dashboards

--- a/tutorials/templates/entities/booking.html
+++ b/tutorials/templates/entities/booking.html
@@ -35,12 +35,20 @@
                 <p><strong>Status</strong>: {{ booking.status }}</p>
             </div>
 
-            <a href="{% url 'manage_bookings' %}" class="btn btn-primary">
-                OK
-            </a>
-            <a href = "{% url 'assign_tutor' booking.id %}" class = "btn btn-warning">
-                Approve
-            </a>            
+            {% if role == "admin" %}
+                <a href="{% url 'manage_bookings' %}" class="btn btn-primary">
+                    OK
+                </a>
+            {% else %}
+                <a href="{% url 'dashboard' %}" class="btn btn-primary">
+                    OK
+                </a>
+            {% endif %}
+            {% if role == "admin" %}
+                <a href = "{% url 'assign_tutor' booking.id %}" class = "btn btn-warning">
+                    Approve
+                </a>   
+            {% endif %}         
             <a href="{% url 'delete_booking' booking.id %}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this booking?');">
                 Delete
             </a>
