--- a/tutorials/templates/tutor_dashboard.html
+++ b/tutorials/templates/tutor_dashboard.html
@@ -29,6 +29,9 @@
                     <td>{{ lesson.booking.lang }}</td>
                     <td>{{ lesson.booking.student.level }}</td>
                     <td>{{ lesson.booking.venue }}</td>
+                    <td class="text-end">
+                        <a href="{% url 'get_lesson' lesson.booking.id %}" class="btn btn-primary btn-sm" >View</a>
+                    </td>
                 </tr>
                 {% empty %}
                 <tr>
@@ -66,6 +69,9 @@
                     <td>{{ lesson.booking.lang }}</td>
                     <td>{{ lesson.booking.student.level }}</td>
                     <td>{{ lesson.booking.venue }}</td>
+                    <td class="text-end">
+                        <a href="{% url 'get_lesson' lesson.booking.id %}" class="btn btn-primary btn-sm" >View</a>
+                    </td>
                 </tr>
                 {% empty %}
                 <tr>
