--- a/tutorials/templates/admin_dashboard.html
+++ b/tutorials/templates/admin_dashboard.html
@@ -13,11 +13,12 @@
       </form>
 
       <!-- Management Buttons -->
-      <div class="mt-5">
+      <div class="mt-6">
         <a href="{% url 'manage_bookings' %}" class="btn btn-secondary btn-lg btn-block rounded-pill mb-3">Manage Bookings</a>
         <a href="{% url 'manage_lessons' %}" class="btn btn-secondary btn-lg btn-block rounded-pill mb-3">Manage Lessons</a>
         <a href="{% url 'manage_students' %}" class="btn btn-secondary btn-lg btn-block rounded-pill mb-3">Manage Students</a>
         <a href="{% url 'manage_tutors' %}" class="btn btn-secondary btn-lg btn-block rounded-pill mb-3">Manage Tutors</a>
+        <a href="{% url 'manage_admins' %}" class="btn btn-secondary btn-lg btn-block rounded-pill mb-3">Manage Admins</a>
         <a href="{% url 'manage_users' %}" class="btn btn-secondary btn-lg btn-block rounded-pill mb-3">Manage Users</a>
       </div>
     </div>
