--- a/tutorials/templates/entities/admin-profile.html
+++ b/tutorials/templates/entities/admin-profile.html
@@ -7,7 +7,7 @@
             <h2 class="mb-4">{{ admin.user.username }}</h2>
 
             <div class="mb-3">
-                <p><strong>Username</strong>: {{ admin.user.id }}</p>
+                <p><strong>User ID</strong>: {{ admin.user.id }}</p>
             </div>
             <div class="mb-3">
                 <p><strong>First Name</strong>: {{ admin.user.first_name }}</p>
