--- a/tutorials/templates/entities/student.html
+++ b/tutorials/templates/entities/student.html
@@ -7,7 +7,7 @@
             <h2 class="mb-4">{{ student.user.username }}</h2>
 
             <div class="mb-3">
-                <p><strong>Username</strong>: {{ student.user.id }}</p>
+                <p><strong>User ID</strong>: {{ student.user.id }}</p>
             </div>
             <div class="mb-3">
                 <p><strong>First Name</strong>: {{ student.user.first_name }}</p>
