Quick changes to get access restrictions and tests working

--- a/tutorials/templates/admin_dashboard.html
+++ b/tutorials/templates/admin_dashboard.html
@@ -9,7 +9,7 @@
       <form method="POST" action="{% url 'admin_sign_up' %}">
         {% csrf_token %}
         <!-- You can include any form fields here for the admin creation -->
-        <button type="submit" class="btn btn-primary btn-lg btn-block rounded-pill">Add Admin</button>
+        <button type="submit" class="btn btn-primary btn-lg btn-block rounded-pill mb-3">Add Admin</button>
       </form>
 
       <!-- Management Buttons -->
