--- a/tutorials/templates/entities/booking.html
+++ b/tutorials/templates/entities/booking.html
@@ -8,7 +8,7 @@
             <h2 class="mb-4">Booking #{{ booking.id }}</p></h2>
 
             <div class="mb-3">
-                <p><strong>Student</strong>: {{ booking.student.username }}</p>
+                <p><strong>Student</strong>: {{ booking.student.user.username }}</p>
             </div>
             <div class="mb-3">
                 <p><strong>Date</strong>: {{ booking.date }}</p>
