--- a/tutorials/templates/entities/user.html
+++ b/tutorials/templates/entities/user.html
@@ -4,7 +4,7 @@
 <div class="container mt-5">
     <div class="card">
         <div class="card-body">
-            <h2 class="mb-4"> {{ user.username }}p></h2>
+            <h2 class="mb-4"> {{ user.username }}</h2>
 
             <div class="mb-3">
                 <p><strong>User ID</strong>: {{ user.id }}</p>
