Refactor some templates, add titles

--- a/tutorials/templates/admin_dashboard.html
+++ b/tutorials/templates/admin_dashboard.html
@@ -1,4 +1,7 @@
 {% extends 'base_content.html' %}
+
+{% block title %}Admin Dashboard{% endblock %}
+
 {% block content %}
   <div class="container-fluid d-flex justify-content-center align-items-center vh-100" style="background: linear-gradient(to right, #2c3e50, #3498db);">
     <div class="text-center text-white p-5 rounded shadow-lg" style="max-width: 800px; background-color: rgba(0, 0, 0, 0.6);">
