--- a/tutorials/templates/manage/manage_bookings.html
+++ b/tutorials/templates/manage/manage_bookings.html
@@ -1,5 +1,7 @@
 {% extends 'manage/manage_entities.html' %}
 
+{% block title %}Manage bookings{% endblock %}
+
 {% block entity_type %}
     bookings
 {% endblock %}
