--- a/tutorials/templates/manage/manage_lessons.html
+++ b/tutorials/templates/manage/manage_lessons.html
@@ -1,5 +1,7 @@
 {% extends 'manage/manage_entities.html' %}
 
+{% block title %}Manage lessons{% endblock %}
+
 {% block entity_type %}
     lessons
 {% endblock %}
