--- a/tutorials/templates/manage/manage_users.html
+++ b/tutorials/templates/manage/manage_users.html
@@ -1,5 +1,7 @@
 {% extends 'manage/manage_entities.html' %}
 
+{% block title %}Manage users{% endblock %}
+
 {% block entity_type %}users{% endblock %} 
 
 {% block table_headers %}
