--- a/tutorials/templates/403.html
+++ b/tutorials/templates/403.html
@@ -1,5 +1,7 @@
 {% extends 'base_content.html' %}
 
+{% block title %}403 Forbidden{% endblock %}
+
 {% block content %}
 <div class="container text-center">
     <div class="alert alert-danger" role="alert">
