--- a/tutorials/templates/admin_sign_up.html
+++ b/tutorials/templates/admin_sign_up.html
@@ -1,4 +1,7 @@
 {% extends 'base_content.html' %}
+
+{% block title %}Admin Signup{% endblock %}
+
 {% block content %}
 <div class="container-fluid d-flex justify-content-center align-items-center min-height: 100vh" style="background: linear-gradient(to right, #2c3e50, #3498db);">
   <div class="text-center text-white p-4 rounded shadow-lg" 
