--- a/tutorials/templates/assign_tutor.html
+++ b/tutorials/templates/assign_tutor.html
@@ -1,7 +1,9 @@
 {% extends "base_content.html" %}
 
+{% block title %}Assign Tutor{% endblock %}
+
 {% block content %}
-<div class="container">
+<div class="container" style="padding-top: 30px">
     <div class="row">
         <div class="col-sm-12 col-md-6 offset-md-3">
             <h1>Assign Tutor or Update Booking</h1>
