--- a/tutorials/templates/dashboard.html
+++ b/tutorials/templates/dashboard.html
@@ -1,7 +1,9 @@
 {% extends 'base_content.html' %}
 
+{% block title %}Dashboard{% endblock %}
+
 {% block content %}
-<div class="container">
+<div class="container" style="padding-top: 30px;">
   <div class="row">
     <div class="col-12">
       <h1>Welcome to your dashboard {{ user.username }}</h1>
