--- a/tutorials/templates/entities/admin-profile.html
+++ b/tutorials/templates/entities/admin-profile.html
@@ -1,5 +1,7 @@
 {% extends 'base_content.html' %}
 
+{% block title %}View Admin{% endblock %}
+
 {% block content %}
 <div class="container mt-5">
     <div class="card">
