--- a/tutorials/templates/entities/lesson.html
+++ b/tutorials/templates/entities/lesson.html
@@ -1,5 +1,7 @@
 {% extends 'base_content.html' %}
 
+{% block title %}View Lesson{% endblock %}
+
 {% block content %}
 <div class="container mt-5">
 
