--- a/tutorials/templates/entities/user.html
+++ b/tutorials/templates/entities/user.html
@@ -1,5 +1,7 @@
 {% extends 'base_content.html' %}
 
+{% block title %}View User{% endblock %}
+
 {% block content %}
 <div class="container mt-5">
     <div class="card">
