--- a/tutorials/templates/password.html
+++ b/tutorials/templates/password.html
@@ -1,6 +1,9 @@
 {% extends 'base_content.html' %}
+
+{% block title %}Change password{% endblock %}
+
 {% block content %}
-<div class="container">
+<div class="container" style="padding-top: 30px;">
   <div class="row">
     <div class="col-12">
       <h1>Change password</h1>
