--- a/tutorials/templates/profile.html
+++ b/tutorials/templates/profile.html
@@ -1,6 +1,9 @@
 {% extends 'base_content.html' %}
+
+{% block title %}Edit profile{% endblock %}
+
 {% block content %}
-<div class="container">
+<div class="container" style="padding-top: 30px;">
   <div class="row">
     <div class="col-12">
       <h1>Edit profile</h1>
