Fix template errors

--- a/tutorials/templates/tutor_sign_up.html
+++ b/tutorials/templates/tutor_sign_up.html
@@ -1,6 +1,5 @@
-{% extends "sign_up_base.html" %}
+{% extends "sign_up.html" %}
 
-{% block title %}Tutor Sign Up{% endblock %}
 {% block form_action %}{% url 'tutor_sign_up' %}{% endblock %}
 {% block button_text %}Sign Up{% endblock %}
 {% block button_class %}btn-success{% endblock %}
