--- a/tutorials/templates/student_sign_up.html
+++ b/tutorials/templates/student_sign_up.html
@@ -1,6 +1,5 @@
-{% extends "sign_up_base.html" %}
+{% extends "sign_up.html" %}
 
-{% block title %}Student Sign Up{% endblock %}
 {% block form_action %}{% url 'student_sign_up' %}{% endblock %}
 {% block button_text %}Sign Up{% endblock %}
 {% block button_class %}btn-primary{% endblock %}
